# git-brws

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Guardfile  README.md  git-brws.1  git-brws.1.ronn  main.go
.github/workflows/: ci.yaml  release.yaml
HomebrewFormula/: git-brws.rb  update.sh
benches/: benchmark.rs
docs/: gen.sh  index.html
lib/: browse_target.go  command.go  commit.go  new_repository.go  options.go
src/: argv.rs  async_runtime.rs  command.rs  config.rs  env.rs  envvar.rs  error.rs  errors.rs  git.rs  github_api.rs  lib.rs  main.rs  operation.rs  page.rs  pull_request.rs  service.rs  url.rs  util.rs
src/test/: argv.rs  command.rs  config.rs  env.rs  envvar.rs  error.rs  git.rs  github_api.rs  helper.rs  mod.rs  page.rs  pull_request.rs  service.rs  url.rs
