[package]
name = "git-brws"
version = "0.11.12"
authors = ["rhysd <lin90162@yahoo.co.jp>"]
description = "Command line tool to open a repository, file, commit, diff, tag, pull request, issue or project's website in your web browser from command line"
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/rhysd/git-brws"
readme = "README.md"
include = ["src/**/*.rs", "Cargo.toml", "LICENSE.txt"]
edition = "2018"
license = "MIT"

[package.metadata.release]
no-dev-version = true

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "git-brws"

[dependencies]
getopts = "0.2"
url = "2.2"
open = "3"
reqwest = { version = "0.11", features = ["json"] }
serde_derive = "1.0"
serde = "1.0"
path-slash = "0.2"
envy = "0.4"
tokio = { version = "1.20", default-features = false }
lazy_static = "1.4"
# Only for futures::join!
futures = { version = "0.3", default-features = false, features = ["async-await"] }

[dev-dependencies]
criterion = "0.3"

# For tokio::test
[dev-dependencies.tokio]
version = "1.20"
default-features = false
features = ["macros"]

[dev-dependencies.cargo-husky]
version = "1.5"
default-features = false
features = ["run-for-all", "prepush-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]

[profile.release]
lto = true
panic = "abort"

[[bench]]
name = "benchmark"
harness = false
path = "benches/benchmark.rs"
